# infinisweep

./: .gitignore  HaskellSweeper  HaskellSweeper.cabal  HaskellSweeper.hs  HaskellSweeper.nix  LICENSE  README.md  TODO.md  default.nix  infinisweep.cabal  infinisweep.nix  nixpkgs.json  nixpkgs.nix  release.nix  shell.nix  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
nix/: nixpkgs.nix  sources.json
src/: Main.hs
src/Sweeper/: Game.hs  Grid.hs
src/Sweeper/Grid/: BalancedTernary.hs
webapp/: infinisweep.frag
