name:               HaskellSweeper
version:            0.1.0.0  
license-file:       LICENSE
license:            MIT
author:             Basile Henry & David Eichmann
maintainer:         bjm.henry@gmail.com
copyright:          2016 Basile Henry & David Eichmann
                    2018 Basile Henry & Nathan van Doorn
category:           Game
build-type:         Simple
cabal-version:      >=1.10

library
  exposed-modules:  Sweeper.Grid
                    Sweeper.Grid.BalancedTernary
                    Sweeper.Game
  build-depends:    base >=4.6 && <5
                  , containers
                  , random
                  , hashable
                  , optparse-applicative
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

executable infinisweep
  main-is:          HaskellSweeper.hs
  build-depends:    base >=4.6 && <5
                  , containers
                  , hashable
                  , ncurses
                  , optparse-applicative
                  , random
                  , strict
                  , HaskellSweeper
  default-language: Haskell2010
  ghc-options:      -Wall
