name:               infinisweep
version:            0.1.0.0
license-file:       LICENSE
license:            MIT
author:             Basile Henry & David Eichmann
maintainer:         bjm.henry@gmail.com
copyright:          2016 Basile Henry & David Eichmann
                    2018 Basile Henry & Nathan van Doorn
                    2021 Basile Henry
category:           Game
build-type:         Simple
cabal-version:      >=1.10

library
  exposed-modules:  Sweeper.Grid
                    Sweeper.Grid.BalancedTernary
                    Sweeper.Game
  build-depends:    base >= 4.9 && < 4.14
                  , random >= 1.1 && < 1.3
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

executable infinisweep
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base
                  , infinisweep
                  , ncurses >= 0.2.14 && < 0.3
                  , optparse-applicative >= 0.11 && < 0.17
                  , random
  default-language: Haskell2010
  ghc-options:      -Wall
